force-app/main/default/objects/blng__Payment__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <description>custom picklist for Bank Accounts to match GL Accounts in NetSuite - BIZ-46933
Added Bank Account for Bad Debts to be used for all subsidiaries</description>
    <label>Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subsidiary__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1006 Cash &amp; Cash Equivalents : 1006 - JPM - 8777 [Paragon Data Labs]</fullName>
            </value>
            <value>
                <fullName>1007 Cash &amp; Cash Equivalents : 1007 - JPM - 1309 [Intapp Ireland Ltd)]</fullName>
            </value>
            <value>
                <fullName>1008 Cash &amp; Cash Equivalents : BofA 3032</fullName>
            </value>
            <value>
                <fullName>1010 Cash &amp; Cash Equivalents : WFB Checking - 1413</fullName>
            </value>
            <value>
                <fullName>1012 Cash &amp; Cash Equivalents : WFB Checking - 3352</fullName>
            </value>
            <value>
                <fullName>1030 Cash &amp; Cash Equivalents : SVB - 2564 [TFG]</fullName>
            </value>
            <value>
                <fullName>1054 Cash &amp; Cash Equivalents : SVB - 7758 [gwabbit]</fullName>
            </value>
            <value>
                <fullName>1065 Cash &amp; Cash Equivalents : WFB Checking - 5724 [Rekoop] GBP</fullName>
            </value>
            <value>
                <fullName>1066 Cash &amp; Cash Equivalents : WFB Checking GBP - 5725 [Intapp Ltd] GBP</fullName>
            </value>
            <value>
                <fullName>1073 Cash &amp; Cash Equivalents : WF Deposits 5262 [DealCloud]</fullName>
            </value>
            <value>
                <fullName>1074 Cash &amp; Cash Equivalents : Wells Fargo GBP - 3547</fullName>
            </value>
            <value>
                <fullName>1076 Cash &amp; Cash Equivalents : Danske SmallBusiness - GBP - Checking [Repstor Ltd]</fullName>
            </value>
            <value>
                <fullName>1078 Cash &amp; Cash Equivalents : EUR Currency Acc - EUR - Checking [Repstor Ltd]</fullName>
            </value>
            <value>
                <fullName>1079 Cash &amp; Cash Equivalents : USD Currency Acc - USD - Checking [Repstor Ltd]</fullName>
            </value>
            <value>
                <fullName>1080 Cash &amp; Cash Equivalents : CAD Currency Acc - CAD - Checking [Repstor Ltd]</fullName>
            </value>
            <value>
                <fullName>1082 Cash &amp; Cash Equivalents : Bridge Bank - USD - Checking [Repstor, Inc.]</fullName>
            </value>
            <value>
                <fullName>1084 Cash &amp; Cash Equivalents : 1084 - JPM - 0556 [Repstor Inc]</fullName>
            </value>
            <value>
                <fullName>1085 Cash &amp; Cash Equivalents : 1085 - JPM - 0333 [TFG]</fullName>
            </value>
            <value>
                <fullName>1087 Cash &amp; Cash Equivalents : 1087 - JPM Receivables - 2650 [IA]</fullName>
            </value>
            <value>
                <fullName>1089 Cash &amp; Cash Equivalents : 1089 - JPM - 8120 [Gwabbit]</fullName>
            </value>
            <value>
                <fullName>1091 Cash &amp; Cash Equivalents : 1091 - JPM Receivables - 2988 [DealCloud]</fullName>
            </value>
            <value>
                <fullName>1093 Cash &amp; Cash Equivalents : 1093 - JPM - 1242 [Intapp Ltd] GBP</fullName>
            </value>
            <value>
                <fullName>1094 Cash &amp; Cash Equivalents : 1094 - JPM - 1243 [IA] GBP</fullName>
            </value>
            <value>
                <fullName>1095 Cash &amp; Cash Equivalents : 1095 - JPM - 1241 [Rekoop Ltd] GBP</fullName>
            </value>
            <value>
                <fullName>1096 Cash &amp; Cash Equivalents : 1096 - JPM - 1448 [Repstor Ltd] GBP</fullName>
            </value>
            <value>
                <fullName>1097 Cash &amp; Cash Equivalents : 1097 - JPM - 1449 [Repstor Ltd] EUR</fullName>
            </value>
            <value>
                <fullName>1098 Cash &amp; Cash Equivalents : 1098 - JPM - 5309 [Intapp Pty Ltd] AUD</fullName>
            </value>
            <value>
                <fullName>1099 Cash &amp; Cash Equivalents : 1099 - JPM - 3356 [OnePlace Pte Ltd]</fullName>
            </value>
            <value>
                <fullName>7850 Operating Expenses : Overhead : Other Operating Expense : Bad Debt Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>