force-app/main/default/objects/blng__Payment__c/fields/Deposit_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Indicator</label>
    <type>Checkbox</type>
</CustomField>