force-app/main/default/objects/blng__Payment__c/fields/NS_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Account_Name__c</fullName>
    <label>NS Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>