force-app/main/default/objects/blng__Payment__c/fields/NS_Inv_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>NS_Inv_Internal_Id__c</fullName>
    <label>NS Inv Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>