force-app/main/default/objects/blng__Payment__c/fields/NS_Payment_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Payment_Document_Number__c</fullName>
    <label>NS Payment Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>