force-app/main/default/objects/blng__Payment__c/fields/NS_Payment_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Payment_Internal_ID__c</fullName>
    <label>NS Payment Internal ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>