force-app/main/default/objects/blng__Payment__c/fields/Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proforma Invoice</label>
    <referenceTo>Proforma_Invoice__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>