force-app/main/default/objects/blng__Payment__c/fields/T_IsMigrated__c.field-meta.xml
<CustomField>
    <fullName>T_IsMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T_IsMigrated</label>
    <type>Checkbox</type>
</CustomField>