force-app/main/default/objects/blng__Payment__c/validationRules/Bad_Debts_Bank_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Bad_Debts_Bank_Account</fullName>
    <active>true</active>
    <description>BIZ-50415; Select the correct Bank Account for writing off Bad Debts</description>
    <errorConditionFormula>(ISPICKVAL(blng__PaymentType__c , &quot;Bad Debt&quot;) &amp;&amp; NOT (CONTAINS(TEXT(Bank_Account__c),&quot;Bad Debt&quot;)))
||
(CONTAINS(TEXT(Bank_Account__c),&quot;Bad Debt&quot;) &amp;&amp; NOT ISPICKVAL(blng__PaymentType__c , &quot;Bad Debt&quot;))</errorConditionFormula>
    <errorMessage>Select the Bad Debts Bank Account for Payment Type &quot;Bad Debts&quot;</errorMessage>
</ValidationRule>