force-app/main/default/objects/blng__Payment__c/validationRules/Select_Bad_Debts_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Bad_Debts_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(blng__PaymentType__c , &quot;Bad Debt&quot;) &amp;&amp;  ISBLANK(TEXT(Bad_Debt_Reason__c))</errorConditionFormula>
    <errorMessage>Select Bad Debts Reason for Payment Type &quot;Bad Debts&quot;</errorMessage>
</ValidationRule>