force-app/main/default/objects/blng__Payment__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Account__c</columns>
    <columns>blng__PaymentDate__c</columns>
    <columns>blng__PaymentType__c</columns>
    <columns>blng__Amount__c</columns>
    <columns>blng__Allocations__c</columns>
    <columns>blng__Unallocations__c</columns>
    <columns>blng__Balance__c</columns>
    <columns>blng__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Proforma_Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>blng__Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All</label>
</ListView>